# tavily-rotator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  selftest.sh
src/: api.rs  config.rs  db.rs  env_push.rs  install.rs  main.rs  rotator.rs  tavily.rs
templates/: index.html
